[package]
name = "kntx"
version = "0.1.0"
edition = "2024"
authors = ["Rauf Latifli <r.m.latifli@student.utwente.nl>"]
license = "MIT"
description = "High-performance L4/L7 reverse proxy"

[dependencies]
# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal"] }

# cli
clap = { version = "4", features = ["derive"] }

# config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

# metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# error handling
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
debug = true  # keep symbols for profiling
